@@ -244,15 +244,35 @@ span.field_required
 }
 
 /* Pagination */
-.pagination_actual
+.pagination
 {
-    color: blue;
-    font-weight: bold;
+    margin-bottom: 10px;
+}
+.pagination .pagination_actual, .pagination .pagination_no_actual, .pagination .text
+{
+    background-color: #BAB8B9;
+    padding: 3px;
+    margin: 3px;
+    font-size: 12px;
 }
 
-.pagination_no_actual
+.pagination .image
 {
-    font-weight: bold;
+    margin: 0px;
+}
+
+.pagination .pagination_actual
+{
+    color: #BAB8B9;
+    border: #BAB8B9 solid 1px;
+    background-color: #ffffff;
+}
+
+.pagination a
+{
+    color: #ffffff;
+    font-size: 12px;
+    text-decoration: none;
 }
 
 /* Propriétés d'affichage */
