@@ -2,7 +2,11 @@ CHANGELOG
 =========
 
 * 1.2.x
-  * [BC brak] Fonction crud_search_reset(CrudManager $crud, $label = 'Reset', $ajax_options = array(), $html_options = array(), $link_parameter = '?raz=1')
+  * [BC break] Fonction Twig crud_paginator_links(CrudManager $crud, $ajax_options = array(), $max_pages_before = 3, $max_pages_after = 3, $image_first = 'ecr/images/i16/resultset_first.png', 
+    $image_last = 'ecr/images/i16/resultset_last.png', $image_previous = 'ecr/images/i16/resultset_previous.png', $image_next = 'ecr/images/i16/resultset_next.png', $attribute_page = '?page=')
+    remplacée par crud_paginator_links(CrudManager $crud, $options = array(), $ajax_options = array())
+    Paginator redessiné
+  * [BC break] Fonction Twig crud_search_reset(CrudManager $crud, $label = 'Reset', $ajax_options = array(), $html_options = array(), $link_parameter = '?raz=1')
     remplacée par crud_search_reset(CrudManager $crud, $options = array(), $ajax_options = array(), $html_options = array())
   * [BC break] Fonction Twig crud_display_config(CrudManager $crud, $modal = true, $ajax_options = array(), $image_url = 'ecr/images/i16/list.png')
     remplacée par crud_display_config(CrudManager $crud, $options = array(), $ajax_options = array())
